# meowDFer

./: .gitignore  README.md  meowDFer.py  pyproject.toml
.github/workflows/: ci.yml
src/: __init__.py  cli.py  meowDFer.py
src/commands/: __init__.py  all_command.py  cm_command.py  convert.py  convert_command.py  extract.py  extract_command.py  merge.py  merge_command.py
src/utils/: convert.py  extract.py  merge.py  utils_naming.py  utils_pdfs.py
tests/: test_convert.py  test_extract.py  test_number_utils.py  test_utils_naming.py  test_utils_pdfs.py  test_utils_zips.py
