[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "meowDFer"
version = "0.1.0"
description = "Convert zipped image files into PDFs"
requires-python = ">=3.10"

dependencies = [
    "Pillow", "pypdf"
]

[project.optional-dependencies]
dev = [
    "pytest"
]

[tool.pytest.ini_options]
pythonpath = ["."]